feat: add RBAC, categories, sidebar improvements, and OpenAPI config