@@ -7,12 +7,13 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.time.OffsetDateTime;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -42,7 +43,7 @@ public class ApiKeyAuthFilter extends OncePerRequestFilter {
                 ApiKey validKey = keyOpt.get();
                 if (validKey.getExpiresAt() == null || validKey.getExpiresAt().isAfter(OffsetDateTime.now())) {
                     UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                            validKey, null, Collections.emptyList());
+                            validKey, null, List.of(new SimpleGrantedAuthority("ROLE_BOT")));
                     SecurityContextHolder.getContext().setAuthentication(auth);
                     
                     // Update last used
